Get crosis key prompts working

--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
-    "@types/node": "^12.11.7",
+    "@types/node": "^12.19.12",
     "@types/vscode": "^1.52.0",
     "@types/websocket": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.15.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
@@ -55,6 +55,6 @@
   "dependencies": {
     "@replit/crosis": "^6.0.4",
     "@replit/protocol": "^0.2.16",
-    "websocket": "^1.0.33"
+    "ezcrosis": "0.0.5"
   }
 }
