--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.19.12",
+    "@types/node-fetch": "^2.5.7",
     "@types/vscode": "^1.52.0",
     "@types/websocket": "^1.0.1",
+    "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.15.0",
@@ -55,6 +57,7 @@
   "dependencies": {
     "@replit/crosis": "^6.0.4",
     "@replit/protocol": "^0.2.16",
-    "ezcrosis": "^0.3.3"
+    "node-fetch": "^2.6.1",
+    "ws": "^7.4.2"
   }
 }
