--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "files.exclude": {
-    "out": false // set this to true to hide the "out" folder with the compiled JS files
+    "dist": false // set this to true to hide the "dist" folder with the compiled JS files
   },
   "search.exclude": {
-    "out": true // set this to false to include "out" folder in search results
+    "dist": true // set this to false to include "dist" folder in search results
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
