--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,26 +2,18 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "outDir": "out",
-    "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
+    "rootDir": "./src",
+    "outDir": "./dist/",
+    "lib": ["es6", "dom"],
     "sourceMap": true,
     "moduleResolution": "node",
     "removeComments": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "baseUrl": "."
+    "noImplicitAny": true
   },
-  "include": ["./src/**/*.tsx", "./src/**/*.ts"],
-  "exclude": ["node_modules", ".vscode-test"]
+  "include": ["src"],
+  "exclude": ["dist"]
 }
