Copy lint config from crosis repo (#3)
* Reject with unavailable when we disconnect and won't reconnect

* Match prettier and eslint config with replit
We should probably have an eslint config repo for repl.it at this point

* Run --fix and change out dir to dist

* Fix build errors

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "onFileSystem:replit",
     "onCommand:replit.init"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -35,8 +35,17 @@
     "vscode:prepublish": "npm run compile",
     "build": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "lint": "eslint src --ext ts",
+    "lint": "eslint ./src --quiet",
     "test": "echo \"no teste :(\""
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "printWidth": 100,
+    "bracketSpacing": true,
+    "arrowParens": "always"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -49,8 +58,16 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.2",
     "vscode-test": "^1.4.1"
   },
