--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.19.12",
     "@types/node-fetch": "^2.5.7",
@@ -86,6 +87,7 @@
     "@replit/protocol": "^0.2.16",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
+    "lodash.debounce": "^4.0.8",
     "node-fetch": "^2.6.1",
     "ws": "^7.4.2"
   }
