--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "replit",
   "description": "",
   "version": "0.0.1",
+  "publisher": "masad-frost",
+  "repository": "https://github.com/replit/replit-vscode",
   "engines": {
     "vscode": "^1.52.0"
   },
@@ -42,10 +44,11 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "build": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "vscode:prepublish": "npm run lint && npm run test-types && npm run build",
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch",
     "lint": "eslint ./src --quiet",
+    "test-types": "tsc -p ./ --noEmit",
     "test": "echo \"no teste :(\""
   },
   "prettier": {
@@ -79,8 +82,11 @@
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "prettier": "^2.2.1",
+    "ts-loader": "^8.0.14",
     "typescript": "^4.1.2",
-    "vscode-test": "^1.4.1"
+    "vscode-test": "^1.4.1",
+    "webpack": "^5.12.2",
+    "webpack-cli": "^4.3.1"
   },
   "dependencies": {
     "@replit/crosis": "^6.0.4",
